--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -54,6 +54,11 @@
             <groupId>com.jfinal</groupId>
             <artifactId>cos</artifactId>
             <version>26Dec2008</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cactus</groupId>
+            <artifactId>cactus.core.framework.uberjar.javaEE.15</artifactId>
+            <version>1.8.1</version>
         </dependency>
     </dependencies>
 </project>
